--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <title>Welcome to my workbook | Xenos</title>
 <link href="assets/css/all.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
-<link rel="canonical" href="https://example.com/index.html">
+<link rel="canonical" href="http://natlund.github.io/index.html">
 <!--[if lt IE 9]><script src="assets/js/html5.js"></script><![endif]--><meta name="author" content="Nat Lund">
 <meta property="og:site_name" content="Xenos">
 <meta property="og:title" content="Welcome to my workbook">
-<meta property="og:url" content="https://example.com/index.html">
+<meta property="og:url" content="http://natlund.github.io/index.html">
 <meta property="og:description" content="This website records various technical things I work on.  What is useful to one explorer may be useful to another, so I have made some effort to make this web repository easily accessible.
 This is not">
 <meta property="og:type" content="article">
@@ -41,7 +41,7 @@ This is not">
         <div class="container">
           
     <h3 id="brand" class="masthead-title">
-      <a href="https://example.com/" title="Xenos" rel="home">Xenos</a>
+      <a href="http://natlund.github.io/" title="Xenos" rel="home">Xenos</a>
     </h3>
 
         </div>
