--- a/listings/index.html
+++ b/listings/index.html
@@ -7,7 +7,7 @@
 <title>listings | Xenos</title>
 <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
-<link rel="canonical" href="https://example.com/listings/index.html">
+<link rel="canonical" href="http://natlund.github.io/listings/index.html">
 <!--[if lt IE 9]><script src="../assets/js/html5.js"></script><![endif]-->
 </head>
 <body>
@@ -35,7 +35,7 @@
         <div class="container">
           
     <h3 id="brand" class="masthead-title">
-      <a href="https://example.com/" title="Xenos" rel="home">Xenos</a>
+      <a href="http://natlund.github.io/" title="Xenos" rel="home">Xenos</a>
     </h3>
 
         </div>
