--- a/stories/nikola-usage.html
+++ b/stories/nikola-usage.html
@@ -6,11 +6,11 @@
 <title>Nikola usage | Xenos</title>
 <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
-<link rel="canonical" href="https://example.com/stories/nikola-usage.html">
+<link rel="canonical" href="http://natlund.github.io/stories/nikola-usage.html">
 <!--[if lt IE 9]><script src="../assets/js/html5.js"></script><![endif]--><meta name="author" content="Nat Lund">
 <meta property="og:site_name" content="Xenos">
 <meta property="og:title" content="Nikola usage">
-<meta property="og:url" content="https://example.com/stories/nikola-usage.html">
+<meta property="og:url" content="http://natlund.github.io/stories/nikola-usage.html">
 <meta property="og:description" content="Nikola is a static site generator geared towards making blogs.  To make a standard website, a few tweaks are required.
 First, note that the front page of a website has the name index.html
 It seems tha">
@@ -42,7 +42,7 @@ It seems tha">
         <div class="container">
           
     <h3 id="brand" class="masthead-title">
-      <a href="https://example.com/" title="Xenos" rel="home">Xenos</a>
+      <a href="http://natlund.github.io/" title="Xenos" rel="home">Xenos</a>
     </h3>
 
         </div>
