--- a/galleries/index.html
+++ b/galleries/index.html
@@ -6,7 +6,7 @@
 <title>galleries | Xenos</title>
 <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
-<link rel="canonical" href="https://example.com/galleries/index.html">
+<link rel="canonical" href="http://natlund.github.io/galleries/index.html">
 <!--[if lt IE 9]><script src="../assets/js/html5.js"></script><![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
 </head>
 <body>
@@ -34,7 +34,7 @@
         <div class="container">
           
     <h3 id="brand" class="masthead-title">
-      <a href="https://example.com/" title="Xenos" rel="home">Xenos</a>
+      <a href="http://natlund.github.io/" title="Xenos" rel="home">Xenos</a>
     </h3>
 
         </div>
