Intro to Monetary Theory. Bitcoin not money. Code examples of coupling

--- a/monetary_theory/six-types-of-money/index.html
+++ b/monetary_theory/six-types-of-money/index.html
@@ -74,6 +74,7 @@
 
     <article class="essay">
         <!--When one tackles a technical subject, a degree of confusion is expected; it is a normal part of the learning process.  But a seasoned learner knows that not all confusion is equal.  An uncomfortable grasping and groping feeling accompanies the construction of a mental model of a deep, unfamiliar concept.  This is a healthy stretch of the mind to accommodate a new idea.  But there is a different kind of frustration caused by *bad explanations*.   Those of us with exposure to mathematical thinking are particularly sensitive to three sins: **missing definitions**, **vague definitions**, and **apparent contradictions**.-->
+<p><em>Written in 2016.  Updated early 2023 to remove references to Bitcoin as fiat money, since by about 2017, it had become obvious that, despite early intentions, Bitcoin had completely failed to become a form of money.</em></p>
 <p>As I explored monetary theory, I discovered that there is a mainstream economics view, and a banker's view, and they differ.  (There is also the crackpot/gold nut/conspiracist camp, but that can safely considered to be a distortion of the credible camps.)  At length, I realised that different authors were using different definitions of money, and in different contexts.  For example, Niall Ferguson in his excellent book <em>The Ascent of Money</em> talked about money as a medium of exchange, then later states that money is <em>really</em> a form of <em>credit</em>. (No criticism is intended - Niall is a brilliant writer and historian, and deep technical detail was beyond the scope of the book.)</p>
 <p>There seemed to be an implicit assumption that all the different definitions of money are equivalent, or in some sense the differences don't matter.  I now suspect that to be a dangerous assumption.  I eventually figured out that the different characterizations of money can be systematically analysed in two dimensions, resulting in six distinguishable types of money. I find that the classification system clarifies the discussion very well, though I am not aware of it anywhere in economic theory.  I present it forthwith.</p>
 <p>Let us start with a definition.</p>
@@ -109,7 +110,7 @@ valuable, nor purchased for direct use.</p>
 </blockquote>
 <hr />
 <p>Examples of commodity money in use include cigarettes (and other drugs) in prisons, and cattle in Africa.  It could be argued that money in the modern world ultimately derives from houses, but we shall explore that in another essay.</p>
-<p><em>Fiat</em> is Latin for 'by decree', which implies some authority to issue the decree that defines something as a unit of currency.  However, authority need not be formal and centralized; a social convention may arise that some particular thing with no inherent value can be traded for goods.  Bitcoin is a recent example.</p>
+<p><em>Fiat</em> is Latin for 'by decree', which implies some authority to issue the decree that defines something as a unit of currency.  Now, <em>in principle</em>, authority need not be formal and centralized; it is at least hypothetically possible that a social convention may arise that some particular thing with no inherent value can be traded for goods.  Bitcoin is a recent example of an attempt at creating a decentralised fiat currency.  However, by about 2017, it had become obvious that Bitcoin was in no sense money, merely an instrument for speculation.  The crypto-collapse of 2022 rammed home the complete failure of the project as a currency.</p>
 <p>In lay discussions of money (especially those of a psycho-ceramic nature), gold is usually <em>contrasted</em> with fiat money.  The claim is that only gold is <em>real</em> money, while money in the bank, or bank notes, are just 'funny' money.  In fact, gold is largely fiat money!  The <em>industrial</em> demand for gold is only a fraction of total demand.  In ancient Incan culture, gold was not used as money, and was not considered particularly scarce.  The modern obsession with gold as money actually traces back to Ancient Rome, where Caesars had pictures of themselves engraved onto noble metal coins, and decreed that these coins could be used as payment.</p>
 <h3 id="three-orders-of-money">Three Orders of Money</h3>
 <p>Given an underlying 'base' unit of money - whether a commodity or a fiat money - there are (at least) three orders of possesion of the money.</p>
@@ -147,7 +148,7 @@ valuable, nor purchased for direct use.</p>
 <p>The last example raises an important issue that we will briefly touch on.  If I have a contract to receive 30 sacks of rice in four month's time, how much rice will you give me <em>now</em> in return for the contract?  Probably less than 30 sacks.  The difference is known as the <em>discount rate</em>, and in medieval Europe, these kinds of transactions were routine. One sees that profits could be made by patient individuals with deep pockets.  In fact, this is how modern banking began in Renaissance Italy, aided in no small part by the Church's ban on charging interest, which led to elaborate deals in loan contracts to properly reward lenders.  Further exploration of this fascinating history, and the concept of interest rates, is beyond the scope of this article</p>
 <p>We are now ready to summarize our classes and orders of money into a six part table.</p>
 <table><thead><tr><th></th><th style="text-align: center">Commodity Money</th><th style="text-align: center">Fiat Money</th></tr></thead><tbody>
-<tr><td>Zeroth Order</td><td style="text-align: center">Rice, Cigarettes</td><td style="text-align: center">Central Bank Money, Bitcoin</td></tr>
+<tr><td>Zeroth Order</td><td style="text-align: center">Rice, Cigarettes</td><td style="text-align: center">Central Bank Money</td></tr>
 <tr><td>First Order</td><td style="text-align: center">Warehouse Receipts</td><td style="text-align: center">Bank Deposits</td></tr>
 <tr><td>Second Order</td><td style="text-align: center">Commodity Loan Contracts</td><td style="text-align: center">Bank Deposits</td></tr>
 </tbody></table>
@@ -157,7 +158,7 @@ valuable, nor purchased for direct use.</p>
 </span><span>|                |                            |                               |
 </span><span>+================+============================+===============================+
 </span><span>|                |                            |                               |
-</span><span>|  Zeroth Order  |  Rice, Cigarettes          |  Central Bank Money, Bitcoin  |
+</span><span>|  Zeroth Order  |  Rice, Cigarettes          |  Central Bank Money           |
 </span><span>|                |                            |                               |
 </span><span>+----------------+----------------------------+-------------------------------+
 </span><span>|                |                            |                               |
