--- a/monetary_theory/index.html
+++ b/monetary_theory/index.html
@@ -38,7 +38,8 @@
 </nav>
 
 <article class="essay">
-  <p>This is just a list of essays on a particular topic.</p>
+  <p>What issues facing the world today have the biggest effect on long-term human welfare?  Pandemics?  Wars?  Dictators?  Muslim terrorism?  Global warming?  Artificial Intelligence?  As these essays will argue, monetary theory deserves serious consideration to be on that list.  For bad monetary policy has been known to contribute to the loss of economic growth for an entire generation.  In terms of material quality of life, this is comparable to the effects of any war of the 20th century.</p>
+<p>Monetary theory is one of the last battlegrounds of economics.  There is no apparently no convincing consensus on a theory of inflation and growth.  Perhaps because of this, lay discussions and books are full of confused ideas from gold-nut conspiracy theories to Modern Monetary Theory.  The fundamental cause of the confusion seems to be that monetary theory is really quite subtle, and is based on some counter-intuitive concepts.  These essays attempt to explore that.</p>
 
 
   <ul>
