--- a/index.html
+++ b/index.html
@@ -87,12 +87,10 @@
     <p>This website records things that I think about.  What is useful to one explorer may be useful to another, so I have made some effort to make the content easy to understand, and easy to find and engage with.</p>
 <p>Therefore, this is not a blog.  As the the original name 'web-log' implies, a blog is a sequence of articles in chronological order, indexed by calendar date.  This calendar-based format is appropriate for contemporaneous commentary about current events. But for content of a technical nature, this 'date + keywords' format is not optimal for discovering and reading articles in the right order.  Too many good technical blogs suffer from this.  Thus, instead, this website organises essays into a tree of various logical categories.</p>
 <p>I trained in theoretical physics, and work as a software engineer in financial services in the city of London, United Kingdom.</p>
+<div class="warning">
+HEALTH WARNING: This website contains rational arguments based on logic and evidence.  As such, it should not be accessed by lefties, cigarette smokers, vegans, <em>Guardian</em> readers, hip-hop fans, lager drinkers, Java programmers, or anyone else.  Inappropriate exposure may cause symptoms including but not limited to: confusion, dizziness, elevated blood pressure, irritation, foaming at the mouth, flatulence, hyperventilation, or Twitter usage.  Seek medical advice if symptoms persist.
+</div>
 
-</article>
-
-
-<article class="warning">
-  HEALTH WARNING: This website contains rational arguments based on logic and evidence.  As such, it should not be accessed by lefties, cigarette smokers, vegans, <em>Guardian</em> readers, hip-hop fans, lager drinkers, Java programmers, or anyone else.  Inappropriate exposure may cause symptoms including but not limited to: confusion, dizziness, elevated blood pressure, irritation, foaming at the mouth, flatulence, hyperventilation, or Twitter usage.  Seek medical advice if symptoms persist.
 </article>
 
 
@@ -100,7 +98,7 @@
 
   <article class="section_pane"
     style="
-      grid-row: 4;
+      grid-row: 3;
       grid-column: 2;
       background: steelblue;
       "
@@ -114,7 +112,7 @@
 
   <article class="section_pane"
     style="
-      grid-row: 4;
+      grid-row: 3;
       grid-column: 3;
       background: Gold;
       "
@@ -128,7 +126,7 @@
 
   <article class="section_pane"
     style="
-      grid-row: 5;
+      grid-row: 4;
       grid-column: 2;
       background: olivedrab;
       "
