Make section panes clickable. Add filler at end of short chapters

--- a/monetary_theory/six-types-of-money/index.html
+++ b/monetary_theory/six-types-of-money/index.html
@@ -191,6 +191,7 @@ valuable, nor purchased for direct use.</p>
        </p>
     </div>
     
+    <div class="filler"></div>
 
     <footer>
       <p class="datestamp"><strong>2016-05-31</strong></p>
