--- a/software_engineering/principles_of_code_structure/art-of-abstraction/index.html
+++ b/software_engineering/principles_of_code_structure/art-of-abstraction/index.html
@@ -361,6 +361,7 @@ Peasant:  &quot;You use a dog to hunt rabbits.&quot;</p>
        </p>
     </div>
     
+    <div class="filler"></div>
 
     <footer>
       <p class="datestamp"><strong>2022-12-19</strong></p>
