--- a/mathematical_physics/calculus-of-variations/index.html
+++ b/mathematical_physics/calculus-of-variations/index.html
@@ -89,6 +89,7 @@
        </p>
     </div>
     
+    <div class="filler"></div>
 
     <footer>
       <p class="datestamp"><strong>2022-12-28</strong></p>
