--- a/software_engineering/principles_of_code_structure/separation-of-functions-and-state/index.html
+++ b/software_engineering/principles_of_code_structure/separation-of-functions-and-state/index.html
@@ -303,6 +303,7 @@
        </p>
     </div>
     
+    <div class="filler"></div>
 
     <footer>
       <p class="datestamp"><strong>2022-12-19</strong></p>
