--- a/software_engineering/principles_of_code_structure/taxonomy-of-connections/index.html
+++ b/software_engineering/principles_of_code_structure/taxonomy-of-connections/index.html
@@ -609,6 +609,7 @@
        </p>
     </div>
     
+    <div class="filler"></div>
 
     <footer>
       <p class="datestamp"><strong>2022-12-19</strong></p>
