--- a/software_engineering/readable-code/index.html
+++ b/software_engineering/readable-code/index.html
@@ -166,6 +166,7 @@
        </p>
     </div>
     
+    <div class="filler"></div>
 
     <footer>
       <p class="datestamp"><strong>2022-03-14</strong></p>
