Tiny tweak to Thinking Like An Engineer around 'clean as you go'

--- a/software_engineering/principles_of_code_structure/thinking-like-an-engineer/index.html
+++ b/software_engineering/principles_of_code_structure/thinking-like-an-engineer/index.html
@@ -236,7 +236,7 @@
     <article class="essay">
         <h1 id="thinking-like-an-engineer">Thinking Like An Engineer</h1>
 <h2 id="format-code-perfectly-at-all-times">Format Code Perfectly At All Times</h2>
-<p>Keep code formatting perfect at all times.  <em>Don't</em> say to yourself &quot;I'll come back and fix the formatting later.&quot;  Write your code in the same way that professional chefs practise 'clean as you go' in a commercial kitchen.  This discipline helps instil both the attention to detail and sensitivity to structure that characterise a good engineering mind.</p>
+<p>Keep code formatting perfect at all times.  <em>Don't</em> say to yourself &quot;I'll come back and fix the formatting later.&quot;  Write your code in the same way that a professional chef would practise 'clean as you go' in a busy commercial kitchen.  This discipline helps instil both the attention to detail and sensitivity to structure that characterise a good engineering mind.</p>
 <hr />
 <p>Work In Progress below this line.</p>
 <h2 id="single-source-of-truth">Single Source Of Truth</h2>
