book_pane_clickable. Lexical Order Should Follow Logical Order. Remove HEALTH WARNING

--- a/software_engineering/index.html
+++ b/software_engineering/index.html
@@ -54,7 +54,12 @@
 
 <article class="essay">
   <p>Software Engineering is distinct from Computer Science.  Software Engineering is obviously a type of Engineering, which is the practice of building things that will be used in the real world and <em>work</em>, while Computer Science is essentially a branch of mathematics.</p>
-<p><a href="https://natlund.github.io/software_engineering/principles_of_code_structure/">Principles Of Code Structure</a></p>
+<p><a href="/software_engineering/principles_of_code_structure/"
+   class="book_pane_clickable"
+   style="background: Gold;"
+   >
+Principles Of Code Structure
+</a></p>
 <p><a href="https://natlund.github.io/software_engineering/readable-code/">Readable Code (Archived)</a></p>
 
 </article>
